fix: reduced logo size on mobile

--- a/src/Styles/base/media-queries.scss
+++ b/src/Styles/base/media-queries.scss
@@ -67,6 +67,10 @@
 
 @media screen and (max-width: 425px) {
 
+    .logo {
+        font-size: 2em !important;
+    }
+
     .navbar {
         padding: 0 10px;
     }
